[tool.poetry]
name = "facebook_rss"
version = "0.4.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
playwright = "v1.8.0a1"
fastapi = "^0.63.0"
uvicorn = { extras = ["standard"], version = "^0.13.4" }
feedgen = "^0.9.0"
SQLAlchemy = "^1.3.23"
python-dotenv = "^0.15.0"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"